--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 
+    <!--
+    "ul" for unordered list, "ol" for ordered list
+    "li" to add items to list (remember sandwich)
+    -->
+
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna</a>
     
