Fix broken code in attributes
Lasagna attributes had > instead of "
so I fixed det shet :3

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
 
     <h1>World's Greatest Lasagna</h1>
     <img src="../images/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.webp"
-    alt="Cooked lasagna> height="563" width="750">
+    alt="Cooked lasagna" height="563" width="750">
 
 </body>
 </html>
