--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 <body>
 
     <h1>World's Greatest Lasagna</h1>
-    <img src="../images/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.webp"
+    <img src="../img/lasagna.webp"
     alt="Cooked lasagna" height="563" width="750">
 
 </body>
