--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,8 +8,17 @@
 <body>
 
     <h1>World's Greatest Lasagna</h1>
+
     <img src="../img/lasagna.webp"
-    alt="Cooked lasagna" height="563" width="750">
+    alt="Cooked lasagna" height="563" width="750"
+    >
+
+    <h3>Description</h3>
+
+    <p>World's Best Lasagna racks up more than 7 million views per year 
+        and has ranked among the most popular lasagna recipes on the internet 
+        for two decades.
+    </p>
 
 </body>
 </html>
