--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,11 +14,22 @@
     >
 
     <h3>Description</h3>
-
     <p>World's Best Lasagna racks up more than 7 million views per year 
         and has ranked among the most popular lasagna recipes on the internet 
         for two decades.
     </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef. </li>
+        <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+        <li>Tomato products: You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+        <li>Sugar: Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+        <li>Spices and seasonings: This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
+        <li>Lasagna noodles: Use store-bought or homemade lasagna noodles.</li>
+        <li>Cheeses: Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+        <li>Egg: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+    </ul>
 
 </body>
 </html>
