--- a/recipes/turkey_sandwich.html
+++ b/recipes/turkey_sandwich.html
@@ -3,42 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lasagna</title>
+    <title>Turkey & Swiss Sandwich</title>
 </head>
 <body>
 
-    <h1>World's Greatest Lasagna</h1>
+    <h1>Grilled Turkey and Swiss Sandwich</h1>
 
-    <img src="../img/lasagna.webp"
-    alt="Cooked lasagna" height="563" width="750"
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets-ucg.meredithcorp.io%2Fdcbd0f04007fa302bc90ffc099498af7%2F1073158.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
+    alt="Turkey & Swiss Sandwich" height="512" width="512"
     >
 
     <h3>Description</h3>
-    <p>World's Best Lasagna racks up more than 7 million views per year 
-        and has ranked among the most popular lasagna recipes on the internet 
-        for two decades.
+    <p>Great for leftover turkey! Very simple but awesome flavor. 
+        Can either broil open-faced or grill as a sandwich. 
+        May add ingredients to your liking such as tomato, onion, etc. Enjoy!
     </p>
 
     <h3>Ingredients</h3>
     <ul>
-        <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef. </li>
-        <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
-        <li>Tomato products: You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
-        <li>Sugar: Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
-        <li>Spices and seasonings: This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
-        <li>Lasagna noodles: Use store-bought or homemade lasagna noodles.</li>
-        <li>Cheeses: Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
-        <li>Egg: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+        <li>1 tablespoon mayonnaise</li>
+        <li>2 slices thick-cut rye bread</li>
+        <li>2 slices Swiss cheese</li>
+        <li>2 slices leftover turkey meat, or to taste</li>
+        <li>1/4 cup baby spinach, or to taste</li>
     </ul>
 
     <h3>Steps</h3>
     <ol>
-        <li>Make the meat sauce.</li>
-        <li>Cook the noodles.</li>
-        <li>Make the ricotta mixture.</li>
-        <li>Layer the lasagna.</li>
-        <li>Cover with foil and bake.</li>
-        <li>Let the lasagna rest before serving.</li>
+        <li>Set oven rack about 6 inches from the heat source and preheat the oven's broiler. </li>
+        <li>Spread mayonnaise onto 1 side of each bread slice. Layer Swiss cheese, turkey, and spinach onto the mayonnaise-side of 1 bread slice; top with second bread slice. Place sandwich on a baking sheet. /li>
+        <li>Broil in the preheated oven until heated through and cheese is bubbling, about 5 minutes. </li>
     </ol>
 
 </body>
