--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     -->
 
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li>
+            <a href="./recipes/lasagna.html">Lasagna</a>
+        </li>
+        <li>
+            <a href="./recipes/turkey_sandwich.html">Turkey Sandwich</a>
+        </li>
+    </ul>
     
 </body>
 </html>
