--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 
     <h1>Odin Recipes</h1>
     <ul>
-        <li>
-            <a href="./recipes/lasagna.html">Lasagna</a>
-        </li>
-        <li>
-            <a href="./recipes/turkey_sandwich.html">Turkey Sandwich</a>
-        </li>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/turkey_sandwich.html">Turkey Sandwich</a></li>
+        <li><a href="./recipes/tommatillo_soup.html">Tomatillo Soup</a></li>
     </ul>
     
 </body>
