--- a/recipes/tommatillo_soup.html
+++ b/recipes/tommatillo_soup.html
@@ -3,36 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turkey & Swiss Sandwich</title>
+    <title>Tomatillo Soup</title>
 </head>
 <body>
 
-    <h1>Grilled Turkey and Swiss Sandwich</h1>
+    <h1>Tomatillo Soup</h1>
 
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets-ucg.meredithcorp.io%2Fdcbd0f04007fa302bc90ffc099498af7%2F1073158.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
-    alt="Turkey & Swiss Sandwich" height="512" width="512"
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8491657.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
+    alt="Bowl of tomatillo soup" height="512" width="512"
     >
 
     <h3>Description</h3>
-    <p>Great for leftover turkey! Very simple but awesome flavor. 
-        Can either broil open-faced or grill as a sandwich. 
-        May add ingredients to your liking such as tomato, onion, etc. Enjoy!
+    <p>This tomatillo soup with chicken and jalapeños. 
+        Can be spiced up or tamed down depending on your individual taste. 
+        Keep in mind that you can substitute with canned tomatillos, drained, and chopped. 
+        Garnish with sour cream and cilantro.
     </p>
 
     <h3>Ingredients</h3>
     <ul>
-        <li>1 tablespoon mayonnaise</li>
-        <li>2 slices thick-cut rye bread</li>
-        <li>2 slices Swiss cheese</li>
-        <li>2 slices leftover turkey meat, or to taste</li>
-        <li>1/4 cup baby spinach, or to taste</li>
+        <li>2 skinless, boneless chicken breast halves-pounded thin</li>
+        <li>3 tablespoons olive oil</li>
+        <li>1 onion, chopped</li>
+        <li>3 cloves garlic, minced</li>
+        <li>1 pound chopped tomatillos</li>
+        <li>2 jalapeño peppers, seeded and minced</li>
+        <li>4 cups of chicken stock</li>
+        <li>1/2 teaspoon hot pepper sauce (Optional)</li>
+        <li>1/4 teaspoon cayene pepper (Optional)</li>
+        <li>2 tablespoons chopped fresh cilantro</li>
+        <li>1/4 cup sour scream (Optional)</li>
+        <li>salt to taste</li>
+        <li>ground black pepper to taste</li>
     </ul>
 
     <h3>Steps</h3>
     <ol>
-        <li>Set oven rack about 6 inches from the heat source and preheat the oven's broiler. </li>
-        <li>Spread mayonnaise onto 1 side of each bread slice. Layer Swiss cheese, turkey, and spinach onto the mayonnaise-side of 1 bread slice; top with second bread slice. Place sandwich on a baking sheet. /li>
-        <li>Broil in the preheated oven until heated through and cheese is bubbling, about 5 minutes. </li>
+        <li>Heat oil in a large saucepan or Dutch oven over medium-high heat: add chicken and cook until browned, approximately 2 minutes per side. Remove chicken from the saucepan and set aside.</li>
+        <li>Add onions and garlic to saucepan and sauté over medium-low heat until golden, about 2 to 3 minutes. Stir in tomatillos and jalapeño peppers. Add broth and bring to a boil; reduce heat to low, cover, and simmer for about 15 minutes.</li>
+        <li> Puree soup in batches in a blender or food processor. Return to pot, and reheat. Add hot pepper sauce and cayenne pepper to taste. </li>
+        <li>Shred cooked chicken; stir into soup and season to taste with salt and pepper. Add minced cilantro and ladle into bowls; top with sour scream if you like.</li>
     </ol>
 
 </body>
